tests/check_output/snapshots/errors__check_output__main@application_component_binding_impl_trait.snap
---
source: tests/check_output/mod.rs
expression: pretty
---
Stdout:


Stderr:
error: The type of a binding must not be an `impl <trait>`
  --> examples/component_binding_impl_trait.rs:18:35
   |
18 |     cookies: cloned_instance_bind(impl Cookies + Clone),
   |                                   ^^^^^^^^^^^^^^^^^^^^

error[E0599]: no function or associated item named `builder` found for struct `DirkApplicationComponent` in the current scope
  --> examples/component_binding_impl_trait.rs:8:47
   |
8  |       let component = DirkApplicationComponent::builder()
   |                                                 ^^^^^^^ function or associated item not found in `DirkApplicationComponent`
...
17 | / #[component(
18 | |     cookies: cloned_instance_bind(impl Cookies + Clone),
19 | |     user_name: cloned_instance_bind(U),
20 | |     application: static_bind(Application<C, U>) [cookies, user_name]
21 | | )]
   | |__- function or associated item `builder` not found for this struct
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `builder`, perhaps you need to implement it:
           candidate #1: `DirkComponent`

For more information about this error, try `rustc --explain E0599`.
error: could not compile `application` (example "component_binding_impl_trait") due to 2 previous errors
